--- a/src/index.css
+++ b/src/index.css
@@ -125,13 +125,9 @@ code {
 }
 
 .modal{
-  width: 50vw;
-  height: 80vh;
+  width: 350px;
+  height: 250px;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   margin: 0 auto;
   z-index: 1;
   opacity: 0;
@@ -141,11 +137,101 @@ code {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
   display: none;
 }
 .modal.active{
   opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-modal{
+  position: absolute;
+  right:5px;
+  top:5px;
+  font-size: 1.5em;
+  box-shadow: none;
+  border:none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.modal h4{
+    font-size: 1.2em;
+    margin: 0;
+    margin-bottom: 20px;
+    color:#424242;
+}
+
+.modal input[type="text"]{
   display: block;
+  margin: 0 auto;
+  width: 175px;
+  height: 40px;
+  border-radius: 50px;
+  border: none;
+  background: #f5f5f5;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.colorinput-container{
+  width:175px;
+  height:40px;
+  border-radius: 50px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  overflow: hidden;
+  position: relative;
+}
+.colorinput-container:before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: url('/fx/picker.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 20px;
+  cursor: pointer;
+}
+
+.modal input[type="color"]{
+  display: block;
+  -webkit-appearance: none;
+	border: none;
+	width: 200px;
+  height: 45px;
+  position: absolute;
+  top: -2px;
+  left: -7px;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
+.modal .btn-form{
+  box-shadow: none;
+  color: #424242;
+  border: 2px solid #424242;
+  border-radius: 50px;
+  padding: 8px 20px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all .4s ease;
+}
+
+.modal .btn-form:hover{
+  background:#424242;
+  color:#fff;
 }
 
 .order-switch{
