--- a/src/index.css
+++ b/src/index.css
@@ -194,7 +194,7 @@ code {
   width: 100%;
   height: 100%;
   z-index: 1;
-  background: url('/fx/picker.png');
+  background: url('../../fx/picker.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 20px;
@@ -330,7 +330,7 @@ input[type="color"]::-webkit-color-swatch {
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
-  background-image: url('/fx/seta.svg');
+  background-image: url('../..//fx/seta.svg');
   background-repeat: no-repeat, repeat;
   background-size: 0.39em auto, 100%;
   background-position: left 63%;
